# AdvancedProgramming

./: AbstractFactory.h  BridgePattern.h  Builder.h  CMakeLists.txt  Command.h  FactoryPattern.h  FlyWeight.h  Iterator.h  ObserverPattern.h  Prototype.h  Proxy.h  README.md  Shape.h  Singelton.h  composite.h  decorator.h  facade.h  main.cpp
